--- a/Zach_Page/Angular/FriendsAPI/package.json
+++ b/Zach_Page/Angular/FriendsAPI/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "secondAngular",
+  "name": "AngularFSboilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,6 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.0",
-    "path": "^0.12.7"
+    "mongoose": "^4.9.0"
   }
 }
