--- a/Aly_Hemani/form/package.json
+++ b/Aly_Hemani/form/package.json
@@ -13,7 +13,6 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "express-session": "^1.15.1",
-    "socket.io": "^1.7.3"
+    "express-session": "^1.15.1"
   }
 }
